# QSTP

./: CMakeLists.txt  MPTP.vcxproj  QSTP.sln  README.md  common.h  connections.h  kex.c  kex.h  qstp.h  server.c
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Documents/: QSTP Specification.docx
QSTP/: MPTP.vcxproj.filters  client.c  client.h  logger.h  root.c  root.h  server.h
QSTP Client/: appclt.h  common.h
QSTP Root/: QSTP Root.vcxproj  common.h
QSTP Server/: QSTP Server.vcxproj  appsrv.h
Source/: QSTP.sln
Source/Client/: QSTP Client.vcxproj  appclt.c  appclt.h
Source/QSTP/: MPTP.vcxproj  MPTP.vcxproj.filters  QSTP.vcxproj  client.c  client.h  connections.c  connections.h  doxymain.h  kex.c  kex.h  logger.c  logger.h  qstp.c  qstp.h  qstpcommon.h  root.c  root.h  server.c  server.h
Source/QSTP Client/: QSTP Client.vcxproj  QSTP Client.vcxproj.filters  appclt.c
Source/QSTP Root/: QSTP Root.vcxproj  QSTP Root.vcxproj.filters  apprss.c  apprss.h
Source/QSTP Server/: QSTP Server.vcxproj  appsrv.c  common.h
Source/Root/: QSTP Root.vcxproj  QSTP Root.vcxproj.filters  apprss.c  apprss.h
Source/Server/: QSTP Server.vcxproj  appsrv.c  appsrv.h
docs/: annotated.html  client_8h.js  common_8h.html  connections_8h.html  connections_8h.js  connections_8h_source.html  dir_5a7a8ad7fd52b2a05665dc92ffe673dd.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  globals_defs.html  globals_dup.js  globals_eval.html  kex_8h.html  logger_8h.html  logger_8h_source.html  navtreedata.js  navtreeindex0.js  qstp_8h.js  root_8h.html  root_8h.js  root_8h_source.html  server_8h.html  server_8h_source.html  structqstp__certificate__expiration.js  structqstp__kex__client__state.html  structqstp__kex__server__state.js  structqstp__root__certificate.js  structqstp__server__certificate.html
(+92 files in other folders)
